--- a/config/content.htm
+++ b/config/content.htm
@@ -327,8 +327,28 @@ run()
 <li>請至少練習 key in 這段英文內容三次, 然後看看是否已經了解如何透過電腦鍵盤 touch typing?</li>
 <li>接下來請利用中文輸入 <a href="https://ithelp.ithome.com.tw/articles/10206233">https://ithelp.ithome.com.tw/articles/10206233</a> 的第一段中文說明, 請利用手機計時, 大概需要多少時間?</li>
 </ol>
-<p></p>
-<h1>HW2</h1>
+<h2>SSH</h2>
+<p>SSH 指 Secure Shell: https://en.wikipedia.org/wiki/Secure_Shell 而 Shell 則指: https://en.wikipedia.org/wiki/Shell_(computing), 若在 Ｗindows 操作系統, 可以將 Shell 解釋為提供使用者在命令列視窗 (Dos command Windows) 執行指令的解譯程式. 也就是說 Shell 其實是一組程式, 讓使用者可以透過指令操控電腦. 所以 SSH 就是能夠透過加密網路傳輸協議, 讓使用者安全地透過網路與電腦進行溝通的 Shell. 在 Mac 與 Linux 操作系統中, 可以利用 Terminal 或 X-Terminal, 以 ssh 執行 client 端程式, 透過遠端登入的方式執行 Shell commands. 在 Windows 操作系統則可以利用 Putty 作為 ssh 的 client 端, 透過網路以加密傳輸遠端登入至其他執行 sshd (即 Shell server) 的電腦.</p>
+<h2>SSH push</h2>
+<p>Github 帳號用戶除了可以利用 Personal Token push 改版資料外, 也可以利用 SSH keys 將改版資料 push 到 Github. 詳細說明可以參考<span> </span><a href="https://mde.tw/cd2021/content/SSH%20%E4%BA%86%E6%B2%92.html">SSH 了沒</a>.</p>
+<p>以下說明 SSH push 操作步驟:</p>
+<ol>
+<li>下載 putty 安裝套件, 安裝後, 將 putty 目錄取出放入隨身碟 y:\ 目錄中 (也就是 data 目錄中).</li>
+<li>修改 start_ipv4.bat 或 start_ipv6.bat, 設定 GIT_SSH 變數, 指向 putty 套件目錄中的 plink.exe, 表示隨後的 git push 將透過 putty 中的 session 設定連網. 亦即在 start_ipv4.bat 或 start_ipv6.bat 檔案中加入<span> </span><span>set GIT_SSH=%Disk%:\putty\plink.exe</span></li>
+<li>利用 putty 中的 puttygen.exe 建立 keys, 按下 generate 後, 在 puttygen 執行視窗上方以滑鼠隨意移動, 以便利用滑位置隨機建立 keys, 完成後在原先滑鼠移動位置所出現的 key, 即為 OpenSSH 格式的 public key 內容, 而此一內容就是要放到 Github 帳號 settings 中的 SSH and GPG keys 中的 new SSH key 欄位區 (此為用戶所設定的 public key).</li>
+<li>接下來要利用 puttygen 建立 keys 視窗右下的 save private key, 將此一 .ppk private key 存到 home_ipv4 或</li>
+<li> home_ipv6 目錄下.</li>
+<li>接下來要啟動 putty.exe 建立一個能夠連線至 github.com 網站的 session, 此 session 可以取名為 github.com, 也可以取其它名稱, 只是這個 session 名稱, 將會成為 git 指令與 plink.exe 連結使用後的連線 session 名稱. 而在設定此連線到 github.com 的 session, 在無需設定 proxy 的情況下, 只需要指定 SSH - AUTH 中的 private key 存放位置.</li>
+<li>最後則是配合採用 SSH 協定連線, 必須要修改倉儲中 .git/config url 的連線協定, 從原先的<span> </span><a href="https://github.com/%E5%B8%B3%E8%99%9F/cp2021_hw.git">https://github.com/帳號/cp2021_hw.git</a><span> </span>改為<span> </span><a href="mailto:git@github.com:%E5%B8%B3%E8%99%9F/cp2021_hw.git">git@github.com:帳號/cp2021_hw.git</a><span> </span>也就是採用 git 作為連線到 putty session 名稱 github.com, 然後採用 github 帳號檢查是否此 private key 與前述放入 Github SSH and GPG keys 的 public 成對, 若匹配成功, 則使用者利用上述的 SSH 就可以執行將改版內容 push 到 Github.</li>
+</ol>
+<p>上述採 SSH 流程 push 改版資料的基本概念為:</p>
+<ol>
+<li>啟動隨身系統時就告知 GIT_SSH 變數, 要利用 putty 工具作為 SSH 連線的 client 端.</li>
+<li>接著要建立 OpenSSH 格式的 public key, 在 Github 帳號下完成登記.</li>
+<li>至於近端則要儲存與送到 Github public 對應的 putty 格式 private key, 因為設定 putty session 時會用到此 private key.</li>
+<li>接著就是利用這把近端的 private key, 建立一個能夠採 SSH 協定連線到 Github 的 putty session, 此 session 其實只有三個基本屬性: 連線主機符號名稱, 也就是 github.com, 連線 session 名稱, 以及與 session 對應的 private key 位置.</li>
+<li>最後就是修改要採 SSH push 的倉儲中 .git/config url 連線協定, 從 https 改為 SSH, 並以 git 作為登入帳號, 且宣告所要使用的 putty session 名稱與登入後要驗證 key 權限的 session 名稱.</li>
+</ol><h1>HW2</h1>
 <p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">HW2 - 可攜程序系統與個人網站佔一周成績20%。</span></span></p>
 <p><span style="background-color: #ffff99;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">HW2必須在2021.11.03 22:00之前完成。</span></span></span></p>
 <p><a href="https://github.com/mdecourse/cp2021/discussions/9"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">HW2具體項目成果回報區</span></span></a><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">將於2021.10.25開啟，於</span></span><span style="background-color: #ff99cc;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">2021.11.03 22:00關閉</span></span></span></p>
